Refactored all business logic out of View Components (which are Views and Controllers) and into ViewModels This is the point in MVVM over MVC - it makes this logic unit-testable.